# depends-rs

./: Cargo.toml  README.md  rustfmt.toml
benches/: Cargo.toml  README.md  social_network_top_posts.rs
benches/data/: social_network_results.csv
benches/src/: lib.rs
depends/: Cargo.toml
depends/src/: lib.rs
depends/src/execution/: clean.rs  error.rs  hash_value.rs  identifiable.rs  internal_test_utils.rs  mod.rs  named.rs  primitives.rs  resolve.rs  test_utils.rs  update_derived.rs  update_input.rs
depends/src/execution/dependency/: dep_state.rs  dependency_edge.rs  impls.rs  mod.rs
depends/src/execution/derived/: derived_node.rs  mod.rs
depends/src/execution/input/: input_node.rs  input_state.rs
depends/src/execution/node/: mod.rs  node_hash.rs  node_ref.rs  node_state.rs
depends/src/execution/visitor/: hash_one_ext.rs  hashbrown.rs  mod.rs
depends/src/graphviz/: mod.rs
depends_core/: Cargo.toml
depends_core/src/: common.rs  dependencies.rs  graph.rs  helpers.rs  lib.rs  operation.rs
depends_core/src/execution/: clean.rs  dep.rs  depends.rs  error.rs  graph_create.rs  hash_value.rs  identifiable.rs  is_dirty.rs  leaf_node.rs  mod.rs  named.rs  node_state.rs  primitives.rs  resolve.rs  update_dependee.rs  update_dependee_mut.rs  update_derived.rs  update_input.rs  update_leaf.rs  update_leaf_mut.rs  visitor.rs
depends_core/src/execution/dependency/: dep_ref.rs  dep_state.rs  mod.rs
depends_core/src/execution/derived/: derived_node.rs
depends_core/src/execution/input/: input_node.rs  input_state.rs  mod.rs
depends_core/src/execution/leaf/: leaf_node.rs  leaf_state.rs  mod.rs
depends_core/src/execution/node/: mod.rs  node_hash.rs  node_ref.rs  node_state.rs
depends_core/src/execution/node_state/: hashed_value.rs  mod.rs  node_state.rs  state.rs
depends_core/src/execution/visitor/: hashbrown.rs  mod.rs
depends_core/src/graphviz/: graph.rs  mod.rs  model.rs
depends_core/src/macros/: attrs.rs  common.rs  dependee.rs  dependencies.rs  graph.rs  helpers.rs  leaf.rs  mod.rs  operation.rs
depends_core/src/macros/dependee/: derive.rs  field_attrs.rs  mod.rs  parsed_attrs.rs  struct_attrs.rs
depends_core/src/macros/dependee/snapshots/: depends_core__macros__dependee__derive__tests__dependee.snap  depends_core__macros__dependee__derive__tests__dependee_generics.snap  depends_core__macros__dependee__derive__tests__dependee_generics_custom_clean.snap  depends_core__macros__dependee__derive__tests__dependee_generics_unhashable.snap  depends_core__macros__dependee__tests__dependee.snap  (+5 more)
depends_core/src/macros/graphviz/: graph.rs  mod.rs  model.rs  parser.rs
depends_core/src/macros/leaf/: derive.rs  field_attrs.rs  mod.rs  parsed_attrs.rs  struct_attrs.rs
depends_core/src/macros/model/: attr_model.rs  depends_attr.rs  hash_logic.rs  mod.rs
depends_core/src/macros/snapshots/: depends_core__macros__dependee__tests__dependee.snap  depends_core__macros__dependee__tests__dependee_generics.snap  depends_core__macros__dependee__tests__dependee_generics_custom_clean.snap  depends_core__macros__dependee__tests__dependee_single_dependency.snap  depends_core__macros__dependencies__tests__dependencies.snap  depends_core__macros__dependencies__tests__dependencies_ref_name.snap  depends_core__macros__dependencies_new__tests__dependencies.snap  depends_core__macros__graph__tests__graph.snap  depends_core__macros__leaf__tests__leaf.snap  depends_core__macros__leaf__tests__leaf_generics.snap  depends_core__macros__leaf__tests__leaf_generics_custom_clean.snap  depends_core__macros__operation__tests__operation.snap  depends_core__macros__operation__tests__operation_fields.snap  depends_core__macros__operation__tests__operation_semi_colon.snap  depends_core__macros__operation__tests__operation_tuple.snap
depends_core/src/macros/value/: derive.rs  field_attrs.rs  parsed_attrs.rs  struct_attrs.rs
depends_core/src/model/: depends_attr.rs  hash_logic.rs
depends_core/src/snapshots/: depends_core__dependencies__tests__dependencies.snap  depends_core__graph__tests__graph.snap  depends_core__macros__dependencies__tests__dependencies.snap  depends_core__macros__graph__tests__graph.snap  depends_core__macros__operation__tests__operation.snap  depends_core__macros__operation__tests__operation_fields.snap  depends_core__macros__operation__tests__operation_semi_colon.snap  depends_core__macros__operation__tests__operation_tuple.snap  depends_core__operation__tests__operation.snap  depends_core__operation__tests__operation_fields.snap  depends_core__operation__tests__operation_semi_colon.snap  depends_core__operation__tests__operation_tuple.snap
depends_core/src/value/: derive.rs  field_attrs.rs  mod.rs  parsed_attrs.rs  struct_attrs.rs
depends_core/src/value/snapshots/: depends_core__macros__value__derive__tests__value.snap  depends_core__macros__value__derive__tests__value_generics.snap  depends_core__macros__value__derive__tests__value_generics_custom_clean.snap  depends_core__macros__value__derive__tests__value_hashed_attr.snap  depends_core__macros__value__derive__tests__value_unhashable.snap  depends_core__value__derive__tests__value.snap  depends_core__value__derive__tests__value_generics_custom_clean.snap  depends_core__value__derive__tests__value_hashed_attr.snap  depends_core__value__derive__tests__value_unhashable.snap
depends_derives/: Cargo.toml
depends_derives/src/: lib.rs
examples/: Cargo.toml  README.md  custom_clean.rs  early_exit.rs  maths.rs
examples/early_exit/: Cargo.toml  README.md
examples/examples/: custom_clean.rs  early_exit.rs  graph.rs  maths.rs
examples/maths/: Cargo.toml  README.md
examples/maths/src/: main.rs
examples/src/: comments.rs  comments_to_posts.rs  friends.rs  lib.rs  likes.rs  models.rs  post_scores_query.rs  posts.rs  users.rs
examples/src/docs/: checking_node_state_directly.rs  complex_value.rs  early_exit.rs  getting_started_value.rs  hashing.rs  mod.rs  multiple_dependencies.rs  raising_the_stakes.rs  reducing_more_boilerplate.rs  simple_graph.rs  simple_value.rs
examples/src/maths/: mod.rs
(+92 files in other folders)
