[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
examples = { path = "../examples" }
depends = { path = "../depends" }

envconfig = "0.10.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
csv = "1.2.2"
regex = "1.9.1"
serde = "1.0.171"

[[bench]]
name = "social_network_top_posts"
path = "social_network_top_posts.rs"
harness = false
