[package]
rust-version = "1.81.0"
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
examples = { path = "../examples" }
depends = { path = "../depends", features = ["hashbrown"] }

envconfig = "0.11.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
csv = "1.3.1"
hashbrown = "0.15.2"
serde = "1.0.219"

[[bench]]
name = "social_network_top_posts"
path = "social_network_top_posts.rs"
harness = false
