[package]
rust-version = "1.78.0"
name = "depends"
version = "0.11.0"
edition = "2021"
description = "Ergonomic, performant, incremental computation between arbitrary types"
license = "MIT"
repository = "https://github.com/Justice4Joffrey/depends-rs"
keywords = ["dag", "graph", "incremental", "computation", "cache"]
readme = "../README.md"

[dependencies]
depends_derives = { path = "../depends_derives", version = "0.11.0" }

ahash = { version = "0.8.6", optional = true }
hashbrown = { version = "0.14.0", optional = true, features = ["ahash"] }
paste = "1.0.15"
thiserror = "1.0.43"

[dev-dependencies]
serial_test = "3.0.0"

[features]
default = []
graphviz = ["depends_derives/graphviz"]
hashbrown = ["dep:ahash", "dep:hashbrown"]
test-utils = []

[package.metadata.docs.rs]
features = ["graphviz", "hashbrown"]
no-default-features = true
rustc-args = ["--cfg", "doc_cfg"]
rustdoc-args = ["--cfg", "doc_cfg"]
