[package]
rust-version = "1.81.0"
name = "depends"
version = "0.11.0"
edition = "2021"
description = "Ergonomic, performant, incremental computation between arbitrary types"
license = "MIT"
repository = "https://github.com/Justice4Joffrey/depends-rs"
keywords = ["dag", "graph", "incremental", "computation", "cache"]
readme = "../README.md"

[dependencies]
depends_derives = { path = "../depends_derives", version = "0.11.0" }

foldhash = { version = "0.1.5", optional = true }
hashbrown = { version = "0.15.2", optional = true}
paste = "1.0.15"
thiserror = "2.0.12"

[dev-dependencies]
serial_test = "3.0.0"

[features]
default = []
graphviz = ["depends_derives/graphviz"]
hashbrown = ["dep:foldhash", "dep:hashbrown"]
test-utils = []

[package.metadata.docs.rs]
features = ["graphviz", "hashbrown"]
no-default-features = true
rustc-args = ["--cfg", "doc_cfg"]
rustdoc-args = ["--cfg", "doc_cfg"]
