[package]
name = "depends_core"
license = "MIT"
version = "0.7.1"
edition = "2021"
description = "Ergonomic, performant, incremental computation between arbitrary types"

[dependencies]
ahash = { version = "0.8.3", optional = true }
hashbrown = { version = "0.14.0", optional = true, features = ["ahash"] }
petgraph = { version = "0.6.3", default-features = false, optional = true, features = [] }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.59"
quote = "1.0.28"
thiserror = "1.0.43"
syn = { version = "2.0.26", features = ["full"] }

[dev-dependencies]
colored-diff = "0.2.3"
insta = "1.29.0"
log = "0.4.19"
serial_test = "2.0.0"

[features]
default = []
hashbrown = ["dep:ahash", "dep:hashbrown"]
graphviz = ["dep:petgraph"]
