[package]
rust-version = "1.81.0"
name = "depends_core"
license = "MIT"
version = "0.11.0"
edition = "2021"
description = "Ergonomic, performant, incremental computation between arbitrary types"

[dependencies]
petgraph = { version = "0.8.1", default-features = false, optional = true, features = [] }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.95"
quote = "1.0.40"
thiserror = "2.0.12"
syn = { version = "2.0.100", features = ["full"] }

[dev-dependencies]
colored-diff = "0.2.3"
insta = "1.42.2"
log = "0.4.27"

[features]
default = []
graphviz = ["dep:petgraph"]
