[package]
name = "depends_derives"
version = "0.7.1"
edition = "2021"
license = "MIT"
description = "Ergonomic, performant, incremental computation between arbitrary types"

[dependencies]
depends_core = { path = "../depends_core", version = "0.7.1" }

proc-macro-error = "1.0.4"
proc-macro2 = "1.0.59"
quote = "1.0.28"
syn = "2.0.18"

[features]
graphviz = ["depends_core/graphviz"]
default = []

[lib]
proc-macro = true
