[package]
rust-version = "1.81.0"
name = "depends_derives"
version = "0.11.0"
edition = "2021"
license = "MIT"
description = "Ergonomic, performant, incremental computation between arbitrary types"

[dependencies]
depends_core = { path = "../depends_core", version = "0.11.0" }

proc-macro-error = "1.0.4"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.100"

[features]
graphviz = ["depends_core/graphviz"]
default = []

[lib]
proc-macro = true
