[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
depends = { path = "../depends", features = ["graphviz", "hashbrown"] }

chrono = "0.4.26"
csv = "1.2.2"
hashbrown = "0.14.0"
serde = { version = "1.0.171", features = ["derive"] }

[[example]]
name = "custom_clean"

[[example]]
name = "early_exit"

[[example]]
name = "maths"

[[example]]
name = "graph"
