[package]
rust-version = "1.78.0"
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
depends = { path = "../depends", features = ["graphviz", "hashbrown", "test-utils"] }

chrono = "0.4.31"
csv = "1.2.2"
hashbrown = "0.14.0"
serde = { version = "1.0.171", features = ["derive"] }
serial_test = "3.0.0"

[[example]]
name = "custom_clean"

[[example]]
name = "early_exit"

[[example]]
name = "maths"

[[example]]
name = "graph"
