[package]
rust-version = "1.81.0"
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
depends = { path = "../depends", features = ["graphviz", "hashbrown", "test-utils"] }

chrono = "0.4.40"
csv = "1.3.1"
hashbrown = "0.15.2"
serde = { version = "1.0.219", features = ["derive"] }
serial_test = "3.0.0"

[[example]]
name = "custom_clean"

[[example]]
name = "early_exit"

[[example]]
name = "maths"

[[example]]
name = "graph"
